# knowledge_plagform

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.mineru-parser-service  README.md  docker-compose-full.yml  docker-compose.yml  pyproject.toml  test_neo4j.py
app/: __init__.py  main.py  mineru_parser_service.py  object_storage.py  preprocess.py  progress.py  remote_mineru_parser.py
app/static/: app.js  index.html  styles.css
config/: config.example.yaml  config.yaml  mineru_parser_service.yaml
doc/: api_reference.md  mineru-gpu-parser-service-design.md  multimodal-performance-analysis.md  performance-analysis.md  user_manual.md  上下文增加报告.md  对话调用知识库.md  知识处理及检索.md  知识问答.md
