[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'multimodal-kb-manager'
version = '0.1.0'
description = 'Multimodal knowledge-base management service built on LightRAG and RAG-Anything.'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'fastapi>=0.115,<1.0',
    'uvicorn[standard]>=0.30,<1.0',
    'pydantic>=2.8,<3.0',
    'PyYAML>=6.0,<7.0',
    'python-multipart>=0.0.9,<1.0',
    'pypdf>=4.0,<5.0',
]

[project.scripts]
multimodal-kb = 'app.main:main'

[tool.setuptools]
packages = ['app']
