[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'multimodal-kb-manager'
version = '0.1.0'
description = 'Multimodal knowledge-base management service built on LightRAG and RAG-Anything.'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'fastapi>=0.115,<1.0',
    'uvicorn[standard]>=0.30,<1.0',
    'pydantic>=2.8,<3.0',
    'PyYAML>=6.0,<7.0',
    'python-multipart>=0.0.9,<1.0',
    'pypdf>=4.0,<5.0',
    'redis>=5.0,<8.0',
    'minio>=7.2,<8.0',
    'httpx>=0.27,<1.0',
]

[project.scripts]
multimodal-kb = 'app.main:main'
mineru-parser-service = 'app.mineru_parser_service:main'

[tool.setuptools]
packages = ['app']
